# academic-learning

./: .gitignore  CLAUDE.md  README.md  learn-template.code-workspace  pyproject.toml
.claude/agents/: academic-proofreader.md  english-tutor.md  tex-mentor.md
.claude/commands/: anki-academic.md  anki-english.md  anki-french.md  anki-math-stat.md  tag.md
.claude/hooks/: anki-cleanup.sh  git-main-guard.sh  md-lint.sh
.claude/skills/anki-generator/: SKILL.md  anki_note_types.json  decks.json  note-type.json  replicate_anki_structure.py
.claude/skills/anki-generator/scripts/: formatter.py  send_anki_request.py  yaml_parser.py
data/: decks.json
scripts/: create_literature_note_cli.sh  create_note_cli.sh
src/anki_connect/: __init__.py
src/create-note/: README.md  create_note_cli.py
src/literature-note/: README.md  WORKFLOW_SUMMARY.md  create_literature_note_cli.py
